2007-12-02  Manish Singh  <yosh@gimp.org>

	* app/dialogs/about-dialog.c (about_dialog_load_url): pass NULL
	GError arg to gimp_pdb_execute_procedure_by_name.

	* app/xcf/xcf.c
	* app/xcf/xcf-load.[ch]
	* app/xcf/xcf-save.[ch]: throw GErrors from load/save invokers instead
	of gimp_messages.

2007-12-02  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/app.pl: use GError for error reporting in PDB
	invoker methods.

	* tools/pdbgen/pdb/vectors.pdb: use the GError for the procedures
	introduced for bug #497159.

	* tools/pdbgen/pdb/fileops.pdb: use the GError from file-load and
	file-save procedures.

	* app/pdb/*_cmds.c: regenerated.

	* app/pdb/Makefile.am

	* app/pdb/gimppdberror.[ch]: new file introducing the
	GIMP_PDB_ERROR domain.

	* app/actions/plug-in-commands.c
	* app/actions/vectors-commands.c
	* app/batch.c
	* app/core/gimpimagefile.c
	* app/core/gimppdbprogress.c
	* app/file/file-open.[ch]
	* app/file/file-save.c
	* app/plug-in/gimpplugin-message.c
	* app/plug-in/gimppluginmanager-restore.c
	* app/plug-in/gimppluginprocedure.c
	* app/plug-in/gimptemporaryprocedure.c
	* app/plug-in/plug-in-icc-profile.c
	* app/widgets/gimpbrushselect.c
	* app/widgets/gimpfontselect.c
	* app/widgets/gimpgradientselect.c
	* app/widgets/gimphelp.c
	* app/widgets/gimppaletteselect.c
	* app/widgets/gimppatternselect.c
	* app/widgets/gimppdbdialog.[ch]: changed accordingly.

2007-12-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tiff-load.c (load_image): removed pointless and
	untranslated warning.

2007-12-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (jpeg_load_resolution): only set the
	resolution if X_density and Y_density are not zero. Otherwise the
	default resolution would be used anyway and the user sees an
	annoying and confusion warning.

2007-12-01  Sven Neumann  <sven@gimp.org>

	* app/core/gimpviewable.h: changed GIMP_VIEWABLE_PRIORITY_IDLE to
	G_PRIORITY_LOW. The reason for the very low priority was to keep