@@ -66,7 +66,7 @@ HELP
     return gimp_procedure_get_return_values (procedure, FALSE);
 
   file_proc =
-    file_procedure_find (gimp->plug_in_manager->load_procs, uri, NULL);
+    file_procedure_find (gimp->plug_in_manager->load_procs, uri, error);
 
   g_free (uri);
 
@@ -147,7 +147,7 @@ HELP
 
       layers = file_open_layers (gimp, context, progress,
                                  image, FALSE,
-                                 uri, run_mode, NULL, &status, NULL);
+                                 uri, run_mode, NULL, &status, error);
 
       if (layers)
         {
@@ -204,7 +204,7 @@ HELP
 
       layers = file_open_layers (gimp, context, progress,
                                  image, FALSE,
-                                 uri, run_mode, NULL, &status, NULL);
+                                 uri, run_mode, NULL, &status, error);
 
       if (layers)
         {
@@ -279,7 +279,7 @@ HELP
     return gimp_procedure_get_return_values (procedure, FALSE);
 
   file_proc =
-    file_procedure_find (gimp->plug_in_manager->save_procs, uri, NULL);
+    file_procedure_find (gimp->plug_in_manager->save_procs, uri, error);
 
   g_free (uri);
 
